--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.3
-	yarn_mappings=1.16.3+build.47
-	loader_version=0.10.3+build.211
+	minecraft_version=1.17.1
+	yarn_mappings=1.17.1+build.10
+	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 1.0.2
+	mod_version = 1.0.3
 	maven_group = com.github.chronosacaria
 	archives_base_name = diamondshard
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.24.1+build.412-1.16
+	fabric_version=0.36.1+1.17
