--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.17.1
-	yarn_mappings=1.17.1+build.10
-	loader_version=0.11.6
+	minecraft_version=1.18.2
+	yarn_mappings=1.18.2+build.3
+	loader_version=0.13.3
 
 # Mod Properties
-	mod_version = 1.0.3
+	mod_version = 1.0.3-1.18
 	maven_group = com.github.chronosacaria
 	archives_base_name = diamondshard
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.36.1+1.17
+	fabric_version=0.51.1+1.18.2
